--- a/css/style.css
+++ b/css/style.css
@@ -1192,7 +1192,7 @@ i.fas.fa-chevron-right {
 
     .future-card-content {
         width: 65%;
-        top: 350px;
+        top: 68%;
         padding: 25px;
         height: 250px;
     }
